PROJECT(NetEpollMain)
CMAKE_MINIMUM_REQUIRED(VERSION  2.8)
#set(CMAKE_STATIC_LINKER_FLAGS "${CMAKE_STATIC_LINKER_FLAGS} -m64")
set(CMAKE_STATIC_LINKER_FLAGS  "-DBUGE")
SET(CMAKE_SOURCE_DIR .)
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g -ggdb")
#SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
ADD_SUBDIRECTORY(include/net)
AUX_SOURCE_DIRECTORY(. DIR_SRCS)
ADD_EXECUTABLE(NetEpollMain ${DIR_SRCS} )
TARGET_LINK_LIBRARIES(NetEpollMain NetEpoll)