CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_BUILD_TYPE "Debug") 
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
aux_source_directory(. DIR_LIB_BASE)
add_library (_STMUTEX base/STMutex.cpp)
add_library (_STGUARD base/STGuard.cpp)
add_library (_STWAITER base/STWaiter.cpp)
aux_source_directory(. DIR_LIB_CORE)
add_library (_STEVENDISP core/STEventDispatcher.cpp)
add_library (_STCOREAPP core/STCoreApplication.cpp)
add_library (_STOBJ core/STObject.cpp)
aux_source_directory(. DIR_LIB_EVENT)
add_library (_STEVENT event/STEvent.cpp)
aux_source_directory(. DIR_LIB_THREAD)
add_library (_STTHREAD thread/STThread.cpp base/STWaiter.cpp)
aux_source_directory(. DIR_LIB_TOOLS)
add_library (_STDATAITEM tools/STDataItem.cpp)
add_library (_STINIFILE tools/inifile.c)
aux_source_directory(. DIR_LIB_NET)
add_library (_STNETEPOLL net/STNetEpoll.cpp )
add_library (_STOPTCFG net/STOptCfg.cpp tools/inifile.c)
add_library (_STSIG net/STCSigOpt.cpp )

