CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
SET(CMAKE_BUILD_TYPE "Debug") 
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
aux_source_directory(. DIR_TEST)
ADD_EXECUTABLE(netDemo netDemo.cpp)
TARGET_LINK_LIBRARIES(netDemo _STNETEPOLL  _STMUTEX _STINIFILE _STWAITER _STTHREAD _STOPTCFG _STSIG pthread)
ADD_EXECUTABLE(netDemoClient netDemoClient.cpp)